# It will contain a list of changes made to the admin and quickstart apps.
#

Any time you are upgrading to a new version of the MVC, you should create a new branch.



201403

GLOBAL
	'elastic-native' changed to 'elastic-search' for appPublicSearch
	Elastic is now inventory aware (optionally).
	Elastic can now search by category.
	checkout is now asynchronous (see video for details)

ADMIN
	Product editor debug now includes 'inventory transactions'.


QUICKSTART
	Enhancements to appNav
	-> The container is hidden/visible as well as the buttons to allow for css adjustments.
	-> if referring page only had 1 product, appnav will remain hidden.
	Enhancement - keyword and tag search will now only return results w/ positive inventory.
	Enhancement - infoObj now passed into pageTransition. Allows more customization and control.
	Bug fix - edit address in checkout was broken (as of 201402)
	Enhancement - some better responsiveness for checkout on small screens.



201402

GLOBAL
	introduction of a new templating language, data-tlc. Data-bind will be supported for another few versions.
	introduction of unit-test for TLC (still in development).

ADMIN
	plugins section in setup renamed 'integrations'.
	new integration for shipping: ShipWorks and ShipStation (in integrations).
	new email manager interface in setup (store properties panel). Lots of new features here.
	new email send interface (linked from orders and customer editor).
	enhancements to cart messaging (more admin events get logged).
	A plethora of bug fixes.
	Login page 'recover password' is restored and working.
	Change password on setup page now works.
	orders - custom invoice and packslip now supported for web printing!
		- customize your invoice and packing slip through utilities -> email messaging (in order menu)
		- new popup-less print method (we tested FF, Chrome and IE, plus iOS7. still printing issues in droid/chrome)
		- print option added as contextual menu in order list