@@ -33,7 +33,7 @@ General tab
 	}
 
 
-
+.productSearchInput	{width:45%; font-size:1.4em; border:0; font-weight:normal; margin:1px 6px; padding:2px 12px;}
 
 /* inventory */
 
