@@ -16,14 +16,21 @@ GLOBAL
 	checkout is now asynchronous (see video for details)
 
 ADMIN
-	Product editor debug now includes 'inventory transactions'.
+	Product editor debug
+		enhancement - now includes 'inventory transactions'.
+		bug fix - now shows column headers.
+	enhancement - added a link to the debugger taxes, shipping and promotions.
+	UX - product editor search input now bigger.
+	enhancement - new one page checkout.
+	enhancement - order detailed search will include purchase order, last 4 of CC and/or tender type.
+
 
 
 QUICKSTART
 	Enhancements to appNav
 	-> The container is hidden/visible as well as the buttons to allow for css adjustments.
 	-> if referring page only had 1 product, appnav will remain hidden.
-	Enhancement - keyword and tag search will now only return results w/ positive inventory.
+	Enhancement - keyword and tag search can now only return results w/ positive inventory.
 	Enhancement - infoObj now passed into pageTransition. Allows more customization and control.
 	Bug fix - edit address in checkout was broken (as of 201402)
 	Enhancement - some better responsiveness for checkout on small screens.
